--- a/pulse_mobile/pubspec.yaml
+++ b/pulse_mobile/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cupertino_icons: ^1.0.8
+  get: ^4.7.2
+
 
 dev_dependencies:
   flutter_test:
@@ -17,3 +20,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/logo.png
+    - assets/doctor1.png
+    - assets/doctor2.png
+    - assets/doctor3.png
+    - assets/logo_blue.png
