--- a/pulse_mobile/pubspec.yaml
+++ b/pulse_mobile/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   cached_network_image: ^3.2.1
   flutter_svg: ^1.1.6
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
