labs and doctor and sign up and saving and other

--- a/pulse_mobile/pubspec.yaml
+++ b/pulse_mobile/pubspec.yaml
@@ -19,6 +19,8 @@ dependencies:
   string_2_icon: ^0.0.2
   webview_flutter: ^4.11.0
   webview_flutter_android: ^4.4.2
+  intl: ^0.20.2
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
@@ -35,11 +37,10 @@ flutter:
     - assets/logo_blue.png
     - assets/Google_Icon.webp
     - assets/Apple-Logo.png
-    - assets/corporate_fare_600dp.png
-    - assets/pill_600dp.png
-    - assets/stethoscope_600dp.png
-    - assets/cardiology_600dp.png
     - assets/accessibility_600dp.png
     - assets/child_friendly_600dp.png
+    - assets/cardiology_600dp.png
     - assets/neurology_600dp_.png
     - assets/gastroenterology_600dp.png
+    - assets/lab.jpg
+    - assets/stethoscope_white.png
